Criação da página recife_antigo.html

--- a/HTML/marco_zero_recife/index.html
+++ b/HTML/marco_zero_recife/index.html
@@ -48,6 +48,12 @@
                 <figcaption>Ruas do Marco Zero</figcaption>
             </figure>
         </section>
+
+        <!--Link para a nova página-->
+        <nav>
+            <p>Descubra mais sobre os pontos turísticos do Recife Antigo visitando outros <a href="recife_antigo.html">pontos turísticos</a>:</p>
+        </nav>
+
     </main>
 
     <!-- Rodapé -->
