correção no menu de navegação da página recife_antigo.html

--- a/HTML/marco_zero_recife/recife_antigo.html
+++ b/HTML/marco_zero_recife/recife_antigo.html
@@ -15,7 +15,7 @@
     <nav>
         <ul>
             <li><a href="#cais-do-sertao">Cais do Sertão</a></li>
-            <li><a href="torre-malakoff">Torre Malakoff</a></li>
+            <li><a href="#torre-malakoff">Torre Malakoff</a></li>
         </ul>
     </nav>
 
