estilização da página inciail Marco Zero

--- a/HTML/marco_zero_recife/index.html
+++ b/HTML/marco_zero_recife/index.html
@@ -37,7 +37,7 @@
                 <figcaption>Eventos culturais no Marco Zero</figcaption>
             </figure>
             
-            <p><strong>Visite:</strong> Para mais informações sobre os eventos culturais, visite o site oficial: <a href="https://www.marcozero.com.br/" target="_blank">Clique aqui</a></p>
+            <p><strong>Visite:</strong> Para mais informações sobre os eventos culturais, visite o site oficial: <a href="" target="_blank">Clique aqui</a></p>
         </section>
 
         <section>
@@ -52,7 +52,7 @@
 
         <!--Link para a nova página-->
         <nav>
-            <p>Descubra mais sobre os pontos turísticos do Recife Antigo visitando outros <a href="recife_antigo.html">pontos turísticos</a>:</p>
+            <p>Descubra mais sobre os pontos turísticos do Recife Antigo visitando outros <a href="recife_antigo.html">Pontos Turísticos</a></p>
         </nav>
 
     </main>
